fix link to bg contrast in footer

--- a/Human/styles/footer.less
+++ b/Human/styles/footer.less
@@ -11,4 +11,7 @@
 .pkp_structure_footer_wrapper {
     background: @bg-head;
     color: white;
+    a {
+        color:white;
+    }
 }
